added output on dino_cloud_iam.yaml

--- a/dino_cloud_iam.yaml
+++ b/dino_cloud_iam.yaml
@@ -26,3 +26,9 @@ Resources:
                   "logs:PutLogEvents"
                   ]
                 Resource: '*'
+Outputs:
+  SnsCloudWatchAlerts:
+    Description: "SNS for CloudWatch"
+    Value: !Ref "LambdaRole"
+    Export:
+      Name: !Sub "${AWS::StackName}-lambda-arn"
